<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioMsg" />
    
	<RadioGroup
	    android:id="@+id/radioGoup"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	     >
	    <RadioButton 
	        android:id="@+id/female"
	      	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/female"
	        />
	    <RadioButton 
	           android:id="@+id/male"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/male"
	        />
	</RadioGroup>
	<CheckBox 
	       android:id="@+id/basketBall"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/basketBall"
	    />
	<CheckBox 
	    android:id="@+id/volleyBall"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/volleyBall"
	    />
	<CheckBox 
	    android:id="@+id/football"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/football"
	    />
	<Button
	    android:id="@+id/toShowListView" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/toShowListView"/>
</LinearLayout>
