<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="${relativePackage}.${activityClass}" >
	
        <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relativeTitle" />
    <EditText 
        android:layout_below="@id/title" 
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        style="?android:attr/editTextStyle"
        />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:height="15dp"
        android:text="@string/buttonOk"
        android:width="10dp" 
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
       	 android:layout_marginRight="50dp"/>
    
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonOk"
        android:layout_toLeftOf="@id/buttonOk"
        android:text="@string/buttongCancel" />

   </RelativeLayout>
	
