<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/title"
	        android:textColor="#00853E"
	        />
	    
	    <EditText 
	        android:id="@+id/editText1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        />
	    <EditText 
	        android:id="@+id/editText2"
	        android:inputType="text"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        />
	    <EditText 
	        android:id="@+id/editText3"
	        android:inputType="text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>
   	<LinearLayout 
   	    android:orientation="horizontal"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    >
	     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="#0980E1"
        android:layout_weight="1"
        />
   	    
   	      <TextView
	    android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:background="#5AE00A"
          android:layout_weight="1"
        />
	    <TextView
	    android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:background="#D60AE0"
          android:layout_weight="1"
         />
   	</LinearLayout>
   	<LinearLayout 
   	  android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
   	    <Button 
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:id="@+id/button"
   	        android:text="@string/button"/>
   	    <Button 
   	        android:layout_width="fill_parent"
   	        android:layout_height="wrap_content"
   	        android:id="@+id/nextActivity"
   	        android:text="@string/nextActivity"/>
   	    
   	</LinearLayout>
</LinearLayout>
